Bug 904025 - part1: pass phone state to child process. r=khuey